Fix tabs alignment on Windows. Again.

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1098,7 +1098,7 @@ body.mod-linux.is-hidden-frameless {
     }
     .workspace.is-left-sidedock-open.is-right-sidedock-open .mod-root > .workspace-tabs .workspace-tab-header-container-inner,
     .workspace.is-left-sidedock-open.is-right-sidedock-open .mod-root > .workspace-split:first-of-type .workspace-tab-header-container-inner {
-      padding-left: 46px;
+      padding-left: 48px;
     }
   }
 
@@ -1116,7 +1116,7 @@ body.mod-linux.is-hidden-frameless {
   }
   .workspace.is-left-sidedock-open.is-right-sidedock-open .mod-root > .workspace-tabs .workspace-tab-header-container-inner,
   .workspace.is-left-sidedock-open.is-right-sidedock-open .mod-root > .workspace-split:first-of-type .workspace-tab-header-container-inner {
-    padding-left: 86px;
+    padding-left: 88px;
   }
 }
 
